# elaboration-universes

./: .gitignore  Datatypes.hs  Implementation.cabal  ImplicitCoercion.hs  Main copy.hs  Main.hs  Minimal-Implementation.hs  README.md  TopUniverse.hs  Unification.hs  test.sh
Andras/: 2ltt-Unification.hs  elabzoo-unification.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Conversion.hs  Elaboration.hs  Evaluation.hs  Main.hs  Parsing.hs  Printing.hs  Syntax.hs
test/: ex1  ex10  ex11  ex12  ex13  ex14  ex15  ex3  ex6  ex7  ex8  ex9  fail1  fail2  fail3  fail5  fail7  fail8
test/fail/: fail10  fail11  fail12  fail13  fail14  fail4  fail9
test/pass/: ex10  ex11  ex12  ex13  ex14  ex2  ex4  ex5  ex8  ex9
