cabal-version: 1.12

name:           implem-fuss-free
version:        0.1.0.0
build-type:     Simple


executable elabzoo-univ-lifts
  main-is: Datatypes.hs
  hs-source-dirs:
      ./.
  default-extensions: BlockArguments DerivingVia LambdaCase NoMonomorphismRestriction OverloadedStrings PatternSynonyms RecordWildCards StandaloneDeriving Strict TupleSections ViewPatterns
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures -Wno-unused-do-bind -Wno-unused-matches -O
  build-depends:
      base >=4.7 && <5
    , containers
    , megaparsec
  default-language: Haskell2010